# TVG

./: .gitignore  COPYING  Makefile.am  README  README.txt  autogen.sh  configure.ac
Analyzer/: Makefile.am  analyzer_main.c  layout.c  layout.h  lipsync.c  lipsync.h  loader.c  loader.h  markertype.c  markertype.h
GstOFTVG/: GstOFTVG.def  GstOFTVG.vcxproj  GstOFTVG.vcxproj.filters  Makefile  Makefile.am  Muistiinpanoja.txt  autoaudio_decodebin.cc  autoaudio_decodebin.hh  gstoftvg.c  gstoftvg.cc  gstoftvg.h  gstoftvg.hh  gstoftvg_audio.cc  gstoftvg_audio.hh  gstoftvg_impl.cc  gstoftvg_impl.hh  gstoftvg_layout.cc  gstoftvg_layout.hh  gstoftvg_pixbuf.cc  gstoftvg_pixbuf.hh  gstoftvg_video.cc  gstoftvg_video.hh  gstoftvg_video_process.cc  gstoftvg_video_process.hh  plugin_main.c  timemeasure.h
cerbero/: cross-win64.cbc  linux.config  oftvg.package  oftvg.recipe
distribution/: dlls_to_include.txt  gst-env.bat  gst-env.sh  gst-launch.bat  list_needed_dlls.sh  list_needed_sos.sh  make_distribution.bat  make_linux_pkg.sh  make_windows_pkg.sh  plugins_to_include.txt  sos_to_include.txt
doc/: Run_TVG.bat  Run_TVG_Audio.bat  tvg_manual.docx
examples/: VideoMultimeter.tvg  iPod.tvg
scripts/: Analyzer.bat  Analyzer.sh  Run_TVG.bat  Run_TVG.sh
tags/0.1.0/GstOFTVG/: gstoftvg.c
tags/0.2.0/GstOFTVG/: Muistiinpanoja.txt  gstoftvg_pixbuf.cc
tags/0.3.0/GstOFTVG/: Muistiinpanoja.txt  gstoftvg_pixbuf.cc
tags/0.3.1/GstOFTVG/: GstOFTVG.vcxproj  GstOFTVG.vcxproj.filters  gstoftvg_pixbuf.cc  timemeasure.h
tags/0.4.0/GstOFTVG/: GstOFTVG.vcxproj  Muistiinpanoja.txt  gstoftvg.cc  gstoftvg.hh  gstoftvg_layout.hh
tags/0.4.1/GstOFTVG/: gstoftvg_pixbuf.cc
tags/0.4.1/doc/: Run_TVG.bat
tags/0.4.2/GstOFTVG/: gstoftvg_impl.hh  gstoftvg_layout.hh
tests/: run_all_tests.py  testcases.py  testrunner.py
trunk/GstOFTVG/: GstOFTVG.def  GstOFTVG.sln  GstOFTVG.vcxproj  GstOFTVG.vcxproj.filters  Muistiinpanoja.txt  gstoftvg.c  gstoftvg.cc  gstoftvg.h  gstoftvg.hh  gstoftvg_impl.cc  gstoftvg_impl.hh  gstoftvg_layout.cc  gstoftvg_layout.hh  gstoftvg_pixbuf.cc  gstoftvg_pixbuf.hh  timemeasure.h
trunk/doc/: Run_TVG.bat  toteutusspeksiä.docx  tvg_manual.docx
